# url-shortener-axum-askama-htmx

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
assets/css/: main.css
migrations/: 20240421120838_url.up.sql  20240424105110_url.down.sql  20240424105110_url.up.sql
src/: db.rs  http.rs  main.rs
src/http/: handler.rs  model.rs  service.rs
tailwind/: base.css  package-lock.json  package.json
templates/: 404.html  app.html  base.html  error-page.html  url.html
templates/partials/: footer.html  loading-indicator.html  result.html  url.html
